- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 2.8.1
 
- 
        fbe855126b36bcc6a0fbb63b69647c4fa8aafc10
 
To reproduce:
1. Use a .qmlproject with no mainFile specified, where the project is configured to run the <Current File>. Assume one file in the project, named Main.qml
2. Use "Save As..." to save Main.qml as Main2.qml. Main2.qml will become active in the editor.
3. Make changes to Main2.qml.
4. Run. Main.qml will be run instead of Main2.qml.
Entering a different file and then returning to Main2.qml fixes the issue.
| For Gerrit Dashboard: QTCREATORBUG-10630 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 70385,2 | QmlProject: Update current file name if file gets renamed | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |