QmlProject: Update current file name if file gets renamed

Task-number: QTCREATORBUG-10630
Change-Id: I7901b1204a389e6b9349e059186d0e89f7437740
Reviewed-by: Daniel Teske <daniel.teske@digia.com>